RESOLVED FIXED133007
REGRESSION (NetworkProcess): Trying to use appcache fallback crashes in ApplicationCacheHost::scheduleLoadFallbackResourceFromApplicationCache
https://bugs.webkit.org/show_bug.cgi?id=133007
Summary REGRESSION (NetworkProcess): Trying to use appcache fallback crashes in Appli...
Alexey Proskuryakov
Reported 2014-05-16 14:04:58 PDT
Steps to reproduce: run-webkit-tests -2 http/tests/appcache/fallback.html <rdar://problem/13702706>
Attachments
proposed fix (18.88 KB, patch)
2014-05-16 16:02 PDT, Alexey Proskuryakov
mjs: review+
patch for landing (18.89 KB, patch)
2014-05-17 21:52 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2014-05-16 16:02:19 PDT
Created attachment 231601 [details] proposed fix
WebKit Commit Bot
Comment 2 2014-05-16 16:03:52 PDT
Attachment 231601 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:14: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Maciej Stachowiak
Comment 3 2014-05-17 20:42:57 PDT
Comment on attachment 231601 [details] proposed fix r=me Please fix the style bot's whitespace complaint: WebCore.exp.in:Export
Alexey Proskuryakov
Comment 4 2014-05-17 21:52:22 PDT
Created attachment 231646 [details] patch for landing
WebKit Commit Bot
Comment 5 2014-05-17 22:30:06 PDT
Comment on attachment 231646 [details] patch for landing Clearing flags on attachment: 231646 Committed r169006: <http://trac.webkit.org/changeset/169006>
WebKit Commit Bot
Comment 6 2014-05-17 22:30:09 PDT
All reviewed patches have been landed. Closing bug.
Jon Lee
Comment 7 2014-05-18 09:54:22 PDT
Note You need to log in before you can comment on or make changes to this bug.